products-info responsive layout bug fixed v2

--- a/css/custom css/products-info.scss
+++ b/css/custom css/products-info.scss
@@ -889,4 +889,22 @@ body {
         margin-top: -3em;
         margin-bottom: -3em;
     }
+
+    #comment-section {
+        h3 {
+            margin-left: 1em;
+        }
+    }
+
+    #relatedProducts {
+        padding: 1em;
+    }
+
+    .main-section .main-container .bottom-cont {
+        padding: 1em;
+    }
+
+    #info-cont {
+        width: max-content;
+    }
 }
